--- a/RA_figs.rmd
+++ b/RA_figs.rmd
@@ -23,7 +23,7 @@ par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))
 mod <- lm(log(growth_inv)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
 plot((1+repro_inv)~growth_inv, SummaryInd, log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
 words.top.left.logxy(mod)
-legend("bottomright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 abline(0,1)
 text(2.1,3,srt=45,"RA = 0.5")
 abline(log10(3),1)
@@ -189,7 +189,7 @@ Summary2$cost_plus_growth <- Summary2$cost + Summary2$growth_inv
 plot(total_weight ~ cost_plus_growth,data=subset(Summary2),log="xy",col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000))
 abline(0,1)
 
-legend("bottomright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
 yvar <- "cost"
@@ -309,7 +309,7 @@ par(mfrow=c(1,2), cex=1, omi=c(.7,.7,.1,.1), mai=c(1.1,1.1,.4,0.2))
 plot(asin(sqrt(RA))~growth_stem_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
 mod <- lm(log(growth_stem_diameter)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
 words.top.right.logx(mod)
-legend("bottomleft",legend=labels.spp(),col=col.spp,pch=16, cex=0.8,bty="n")
+legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=0.8,bty="n")
 
 plot(asin(sqrt(RA))~growth_shoot_diameter,data=subset(SummaryInd,RA>0),log="x",col=col.spp(species), pch=16)
 mod <- lm(log(growth_shoot_diameter)~asin(sqrt(RA)),data=subset(SummaryInd,RA>0))
@@ -360,7 +360,7 @@ legend("bottomleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
     RGR created a much easer to describe PCA - it fell out wonderfully opposite RGR and orthogonal to 
     WD, seedsize, LMA, total plant size  
     
-* Orthoganal to these in WD vs. maxH, LMA_mean, seed_size, and shoot_growth - species that are taller as adults have bigger seeds, higher LMA, and greater shoot growth (both stem growth & leaf count), independent of their current (age dependent) size
+* Orthoganal to these in WD vs. maxH, LMA, seed_size, and shoot_growth - species that are taller as adults have bigger seeds, higher LMA, and greater shoot growth (both stem growth & leaf count), independent of their current (age dependent) size
 
 * I interpret this to mean that the three traits (Hmax, LMA, WD) are strongly correlated and shift predictably across the species; confirms that I have selected a wide range of species from the community
 
@@ -370,7 +370,7 @@ legend("bottomleft",legend=labels.age(),col=col.age,pch=16, cex=1.1,bty="n")
 par(mfrow=c(1,1), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 SummaryIndPCA <- SummaryInd %>%
   filter(shoot_leaf_count>0&shoot_leaf_area>0&shoot_growth_leaf_area!=0) %>%
-  select(prop_maxH,height,maxH,wood_density,LMA_mean,seed_size,growth_leaf,
+  select(prop_maxH,height,maxH,wood_density,LMA,seed_size,growth_leaf,
          growth_stem_diameter,leaf_area,growth_shoot_diameter,growth_stem_area,shoot_leaf_count,total_weight,
          RA,seedset,repro_all_count,accessory_inv,propagule_inv,shoot_leaf_area,shoot_growth_leaf_area,scaled_growth_stem_diameter)
 
@@ -458,9 +458,9 @@ par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species),xlim=c(-.1,.1))
 arrows(0, 0, (.8*PCA_loadings$PC2_scale), (.8*PCA_loadings$PC1_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mean1 <- PCA_by_species$PC1_scale_mean
+mean1 <- PCA_by_species$PC1_scale
 se1 <- PCA_by_species$PC1_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 1")
 se_function(mean1,se1)
@@ -473,7 +473,7 @@ arrows(0, 0, (.9*PCA_loadings$PC2_scale), (.9*PCA_loadings$PC1_scale), length = 
 text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 legend("topright",legend=labels.age(),col=col.age,pch=16, cex=.8,bty="n")
 
-mean1 <- PCA_by_age$PC1_scale_mean
+mean1 <- PCA_by_age$PC1_scale
 se1 <- PCA_by_age$PC1_scale_se
 plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 1")
 se_function(mean1,se1)
@@ -490,7 +490,7 @@ plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-mean1 <- PCA_by_species$PC2_scale_mean
+mean1 <- PCA_by_species$PC2_scale
 se1 <- PCA_by_species$PC2_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 2")
 se_function(mean1,se1)
@@ -502,7 +502,7 @@ plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-mean1 <- PCA_by_age$PC2_scale_mean
+mean1 <- PCA_by_age$PC2_scale
 se1 <- PCA_by_age$PC2_scale_se
 plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 2")
 se_function(mean1,se1)
@@ -511,7 +511,7 @@ se_function(mean1,se1)
 ####PCA axis 3 again divides mainly by species
 * it explains 9% of the variance (total variance explained now at 68%)  
 * It is dividing the three (of 4) canopy species, HATE, PEPU, PELA, (BAER) versus
-* top variable loadings: scaled_growth_stem_diameter, wood_density,growth_stem_diameter, shoot_leaf_count vs. maxH, LMA_mean, seed_size, RA  
+* top variable loadings: scaled_growth_stem_diameter, wood_density,growth_stem_diameter, shoot_leaf_count vs. maxH, LMA, seed_size, RA  
 * not terribly interpretable, since doesn't make sense that scaled_growth_stem_diameter with wood_density  
 
 ```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
@@ -521,7 +521,7 @@ plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species),ylim
 arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(1.1*PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=.8,col="black")
 
-mean1 <- PCA_by_species$PC3_scale_mean
+mean1 <- PCA_by_species$PC3_scale
 se1 <- PCA_by_species$PC3_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 3")
 se_function(mean1,se1)
@@ -533,7 +533,7 @@ plot(PC3_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age),ylim=c
 arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(1.1*PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-mean1 <- PCA_by_age$PC3_scale_mean
+mean1 <- PCA_by_age$PC3_scale
 se1 <- PCA_by_age$PC3_scale_se
 plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 2")
 se_function(mean1,se1)
@@ -542,7 +542,7 @@ se_function(mean1,se1)
 ####PCA axis 4  
 * it explains 7% of the variance (total variance explained now at 74%)
 * it divides stem vs shoot growth variables  
-* high loadings for growth_stem_area, growth_leaf, LMA_mean, seed_set vs low loadings for shoot_growth_leaf_area, wood_density, prop_maxH, seed_size  
+* high loadings for growth_stem_area, growth_leaf, LMA, seed_set vs low loadings for shoot_growth_leaf_area, wood_density, prop_maxH, seed_size  
 * BAER, EPMI, HATE and HEPU have higher values vs. BOLE, GRBU, GRSP with lower values; in a sense these later species have more shoot growth than stem growth and spend more of their life close to their maxH - which is true  
 * there is no significant age component  
 ```{r, echo=FALSE,message=FALSE,fig.width=20, fig.height=14}
@@ -551,9 +551,9 @@ par(mfrow=c(2,3), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species),ylim=c(-.15,.15))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mean1 <- PCA_by_species$PC4_scale_mean
+mean1 <- PCA_by_species$PC4_scale
 se1 <- PCA_by_species$PC4_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 4",ylim=c(-.05,.06))
 se_function(mean1,se1)
@@ -565,7 +565,7 @@ plot(PC4_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age),ylim=c
 arrows(0, 0, (.8*PCA_loadings$PC1_scale), (.8*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(1.1*PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-mean1 <- PCA_by_age$PC4_scale_mean
+mean1 <- PCA_by_age$PC4_scale
 se1 <- PCA_by_age$PC4_scale_se
 plot(mean1~as.factor(age),PCA_by_age,cex.axis=.5,pch=16,ylab="PCA axis 2")
 se_function(mean1,se1)
