--- a/results_accessory_v3.Rmd
+++ b/results_accessory_v3.Rmd
@@ -52,7 +52,7 @@ abline(-1,1)
 text(120,250,"all acc costs pre-pollination",srt=45)
 text(3000,180,"10% acc costs pre-pollination",srt=45)
 text(10,3,"50%",srt=45)
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 ```
 
 ##Which measure of reproductive output best correlates with plant size or growth
@@ -74,12 +74,12 @@ words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(propagule_inv), data=subset(SummaryInd,propagule_inv>0))
 plot(propagule_inv~total_weight,data=subset(SummaryInd,propagule_inv>0), log="xy",col=col.spp(species), pch=16, xlab="", ylab="Propagule investment (mg)", xlim=c(100,2000000))
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(prepollen_all_inv), data=subset(SummaryInd,prepollen_all_inv>0))
 plot(prepollen_all_inv~total_weight,data=subset(SummaryInd,prepollen_all_inv>0), log="xy",col=col.spp(species), pch=16, xlab="", ylab="Prepollen investment (mg)", xlim=c(100,2000000))
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mtext("Total plant size (mg)",1, outer=TRUE,cex=1.2)
@@ -98,7 +98,7 @@ plot(seed_count~accessory_per_seed,SummaryInd, log="xy", pch=16,col=col.spp(spec
 words.bottom.left.logxy(mod)
 
 plot(seed_count~(prop_accessory),SummaryInd, log="y", pch=16,col=col.spp(species),ylab="",xlab="proportion of reproduction to accessory tissues",cex=.9)
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 ```
   
 ### Do accessory costs shift with seed size?
@@ -118,59 +118,59 @@ Interpretation:
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(0.4,0.6,0.7,0.3), mai=c(.7,1,0.3,0.3))
 #mod <- lm(log(seed_size)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-mod <- lm(log(seed_size)~(accessory_per_seed_mean),SummarySpp)
+mod <- lm(log(seed_size)~(accessory_per_seed),SummarySpp[["mean"]])
 plot(accessory_per_seed~seed_size,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=.9)
-points((accessory_per_seed_mean)~seed_size,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+points((accessory_per_seed)~seed_size,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 #mod <- lm(log(seed_size)~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-mod <- lm(log(seed_size)~asin(sqrt(prop_accessory_mean)),SummarySpp)
+mod <- lm(log(seed_size)~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
 plot(asin(sqrt(prop_accessory))~seed_size,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=.9)
 words.bottom.right.logx(mod)
-points(asin(sqrt(prop_accessory_mean))~seed_size,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+points(asin(sqrt(prop_accessory))~seed_size,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 mtext("seed size (mg)",1, outer=TRUE,cex=1.2)
 
 
 #mod <- lm(log(total_weight)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-mod <- lm(log(total_weight_mean)~log(accessory_per_seed_mean),SummarySpp)
+mod <- lm(log(total_weight)~log(accessory_per_seed),SummarySpp[["mean"]])
 plot(accessory_per_seed~total_weight,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=.9)
-points((accessory_per_seed_mean)~total_weight_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+points((accessory_per_seed)~total_weight,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
 
 #mod <- lm(log(total_weight)~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-mod <- lm(log(total_weight_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
+mod <- lm(log(total_weight)~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
 plot(asin(sqrt(prop_accessory))~total_weight,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
-points(asin(sqrt(prop_accessory_mean))~total_weight_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+points(asin(sqrt(prop_accessory))~total_weight,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logx(mod)
 mtext("total plant weight (mg)",1, outer=TRUE,cex=1.2)
 
 
 #mod <- lm(log(seedset)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-mod <- lm(log(seedset_mean)~log(accessory_per_seed_mean),SummarySpp)
+mod <- lm(log(seedset)~log(accessory_per_seed),SummarySpp[["mean"]])
 plot((accessory_per_seed)~seedset,SummaryInd, log="xy", pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=0.9)
-points((accessory_per_seed_mean)~seedset_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+points((accessory_per_seed)~seedset,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.top.right.logxy(mod)
 
 #mod <- lm(log(seedset)~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0))
-mod <- lm(log(seedset_mean)~asin(sqrt(prop_accessory_mean)),SummarySpp)
+mod <- lm(log(seedset)~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
 plot(asin(sqrt(prop_accessory))~seedset,SummaryInd, log="x", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
-legend("bottomleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
-points(asin(sqrt(prop_accessory_mean))~seedset_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
+points(asin(sqrt(prop_accessory))~seedset,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.top.right.logx(mod)
 mtext("seedset",1, outer=TRUE,cex=1.2)
 
 
 #mod <- lm(log(prepollen_all_per_seed)~log(accessory_per_seed),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0&prepollen_all_per_seed>0))
-mod <- lm(log(prepollen_all_per_seed_mean)~log(accessory_per_seed_mean),SummarySpp)
+mod <- lm(log(prepollen_all_per_seed)~log(accessory_per_seed),SummarySpp[["mean"]])
 plot((accessory_per_seed)~(prepollen_all_per_seed),SummaryInd, log="xy",pch=16,col=col.spp(species),ylab="accessory costs per successful seed",xlab="",cex=0.9)
-points((accessory_per_seed_mean)~prepollen_all_per_seed_mean,SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+points((accessory_per_seed)~prepollen_all_per_seed,SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right.logxy(mod)
 
 #mod <- lm(asin(sqrt(prop_prepollen_all))~asin(sqrt(prop_accessory)),data=subset(SummaryInd,seed_count>0&accessory_per_seed>0&prepollen_all_per_seed>0))
-mod <- lm(asin(sqrt(prop_prepollen_all_mean))~asin(sqrt(prop_accessory_mean)),SummarySpp)
+mod <- lm(asin(sqrt(prop_prepollen_all))~asin(sqrt(prop_accessory)),SummarySpp[["mean"]])
 plot(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummaryInd, log="", pch=16,col=col.spp(species),ylab="proportional accessory costs",xlab="",cex=0.9)
-points(asin(sqrt(prop_accessory_mean))~asin(sqrt(prop_prepollen_all_mean)),SummarySpp, pch=16,col=col.spp(species),cex=1.8)
+points(asin(sqrt(prop_accessory))~asin(sqrt(prop_prepollen_all)),SummarySpp[["mean"]], pch=16,col=col.spp(species),cex=1.8)
 words.bottom.right(mod)
 mtext("pre-pollination costs (proportional)",1, outer=TRUE,cex=1.2)
 ```
@@ -184,8 +184,8 @@ mtext("pre-pollination costs (proportional)",1, outer=TRUE,cex=1.2)
 * In other words, patterns of accessory costs vs. seed size, plant size, etc come about due to the differential effect of bud, flower abortion across species  
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))
-plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp(species),xlab="costs to make 1 seed (mg)",ylab="seed size (mg)",cex=1.2)
-mod <- lm(seedcosts~seed_size, SummarySpp)
+plot(seed_size~seedcosts,data=subset(SummarySpp[["mean"]]),log="xy",pch=16,col=col.spp(species),xlab="costs to make 1 seed (mg)",ylab="seed size (mg)",cex=1.2)
+mod <- lm(seedcosts~seed_size, SummarySpp[["mean"]])
 abline(0,1)
 abline(-1,1)
 abline(-2,1)
@@ -193,11 +193,11 @@ text(5,6.5,srt=40,"no accessory costs")
 text(2.5,.35,srt=40,"90%")
 text(7,.1,srt=40,"accessory costs = 99%")
 words.top.left.logxy(mod)
-text(seed_size~seedcosts,data=subset(SummarySpp),labels=species, pos=1,offset=.6,cex=0.8,col="black")
+text(seed_size~seedcosts,data=subset(SummarySpp[["mean"]]),labels=species, pos=1,offset=.6,cex=0.8,col="black")
 
-plot(seed_size~costs_per_seed,data=subset(SummarySpp),log="y",pch=16,col=col.spp(species),ylab="",xlab="proportional accessory costs, scaled by seed weight",cex=1.2)
-text(seed_size~costs_per_seed,data=subset(SummarySpp),labels=species, pos=1,offset=.6,cex=0.8,col="black")
-mod <- lm(costs_per_seed~seed_size, SummarySpp)
+plot(seed_size~costs_per_seed,data=subset(SummarySpp[["mean"]]),log="y",pch=16,col=col.spp(species),ylab="",xlab="proportional accessory costs, scaled by seed weight",cex=1.2)
+text(seed_size~costs_per_seed,data=subset(SummarySpp[["mean"]]),labels=species, pos=1,offset=.6,cex=0.8,col="black")
+mod <- lm(costs_per_seed~seed_size, SummarySpp[["mean"]])
 words.bottom.left.logy(mod)
 ```
 
@@ -231,7 +231,7 @@ words.bottom.right(mod)
 mod <- lm(asin(sqrt(prop_propagule))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
 plot(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 mod <- lm(asin(sqrt(propagule_per_seed))~asin(sqrt(RA)),data=subset(SummaryInd,prop_propagule>0))
 plot(asin(sqrt(RA))~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="x",pch=16,col=col.spp(species))
@@ -253,7 +253,7 @@ words.bottom.right.logy(mod)
 mod <- lm(asin(sqrt(prop_propagule))~log(repro_inv),data=subset(SummaryInd,prop_propagule>0))
 plot((repro_inv)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species),log="y")
 words.bottom.right.logy(mod)
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 mod <- lm(log(propagule_per_seed)~log(repro_inv),data=subset(SummaryInd,seedset>0&seedset<1))
 plot((repro_inv)~(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1), log="xy",pch=16,col=col.spp(species))
@@ -282,7 +282,7 @@ words.bottom.right.logx(mod)
 mod <- lm((prop_maxH)~asin(sqrt(prop_propagule)),data=subset(SummaryInd,prop_propagule>0))
 plot(asin(sqrt(prop_propagule))~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), pch=16,col=col.spp(species))
 words.bottom.right(mod)
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 mod <- lm((prop_maxH)~log(propagule_per_seed),data=subset(SummaryInd,seedset>0&seedset<1))
 plot((propagule_per_seed)~(prop_maxH),data=subset(SummaryInd,seedset>0&seedset<1), log="y",pch=16,col=col.spp(species))
@@ -321,7 +321,7 @@ words.bottom.right.logx(mod)
 mod <- lm(log(RA)~log((packaging_dispersal_inv)),data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0))
 plot(packaging_dispersal_inv~RA,data=subset(SummaryInd,RA>0&packaging_dispersal_inv>0), pch=16,col=col.spp(species),log="xy", ylab="energy to packaging and dispersal (mg)")
 words.bottom.right.logxy(mod)
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 mod <- lm(log(RA)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0))
 plot(asin(sqrt(prop_packaging_dispersal))~RA,data=subset(SummaryInd,RA>0&prop_packaging_dispersal>0), log="x", pch=16,col=col.spp(species),ylab="packaging and dispersal (as proportion repro inv)")
@@ -376,7 +376,7 @@ words.bottom.left(mod)
 mod <- lm((prop_maxH)~log((packaging_dispersal_inv)),data=subset(SummaryInd,prop_maxH>0&packaging_dispersal_inv>0))
 plot(packaging_dispersal_inv~prop_maxH,data=subset(SummaryInd,prop_maxH>0&packaging_dispersal_inv>0), pch=16,col=col.spp(species),log="y", ylab="energy to packaging and dispersal (mg)")
 words.bottom.right.logy(mod)
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 mod <- lm((prop_maxH)~asin(sqrt(prop_packaging_dispersal)),data=subset(SummaryInd,prop_maxH>0))
 plot(asin(sqrt(prop_packaging_dispersal))~prop_maxH,data=subset(SummaryInd,prop_maxH>0), pch=16,col=col.spp(species),ylab="packaging and dispersal (as proportion repro inv)")
@@ -398,44 +398,44 @@ words.bottom.left(mod)
 - HATE invests by far the least into propagules  
 ```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=28}
 par(mfrow=c(4,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2))  
-mean1 <- SummarySpp$prop_propagule_mean
+mean1 <- SummarySpp$prop_propagule
 se1 <- SummarySpp$prop_propagule_se
-plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylim=c(.002,.25),ylab="propagules",xlab="")
+plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.002,.25),ylab="propagules",xlab="")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$propagule_per_seed_mean
+mean1 <- SummarySpp$propagule_per_seed
 se1 <- SummarySpp$propagule_per_seed_se
-plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylab="propagules",xlab="")
+plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylab="propagules",xlab="")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prop_prepollen_all_mean
+mean1 <- SummarySpp$prop_prepollen_all
 se1 <- SummarySpp$prop_prepollen_all_se
-plot(mean1~species,data=subset(SummarySpp),cex.axis=.5,pch=16,ylim=c(.1,1),ylab="pre-pollination tissues",xlab="")
+plot(mean1~species,data=subset(SummarySpp[["mean"]]),cex.axis=.5,pch=16,ylim=c(.1,1),ylab="pre-pollination tissues",xlab="")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prepollen_all_per_seed_mean
+mean1 <- SummarySpp$prepollen_all_per_seed
 se1 <- SummarySpp$prepollen_all_per_seed_se
-plot((.01+prepollen_all_per_seed_mean)~species,data=subset(SummarySpp),cex.axis=.5,pch=16,ylab="pre-pollination tissues",xlab="",log="y")
+plot((.01+prepollen_all_per_seed)~species,data=subset(SummarySpp[["mean"]]),cex.axis=.5,pch=16,ylab="pre-pollination tissues",xlab="",log="y")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prop_packaging_dispersal_mean
+mean1 <- SummarySpp$prop_packaging_dispersal
 se1 <- SummarySpp$prop_packaging_dispersal_se
-plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="packaging and dispersal")
+plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="packaging and dispersal")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$packaging_dispersal_per_seed_mean
+mean1 <- SummarySpp$packaging_dispersal_per_seed
 se1 <- SummarySpp$packaging_dispersal_per_seed_se
-plot((packaging_dispersal_per_seed_mean+.1)~species,SummarySpp,cex.axis=.5,pch=16,ylab="packaging and dispersal",log="y")
+plot((packaging_dispersal_per_seed+.1)~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,ylab="packaging and dispersal",log="y")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$prop_postpollen_aborted_mean
+mean1 <- SummarySpp$prop_postpollen_aborted
 se1 <- SummarySpp$prop_postpollen_aborted_se
-plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="aborted post-pollination tissues")
+plot(mean1~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="aborted post-pollination tissues")
 se_function(mean1,se1)
 
-mean1 <- SummarySpp$postpollen_aborted_per_seed_mean
+mean1 <- SummarySpp$postpollen_aborted_per_seed
 se1 <- SummarySpp$postpollen_aborted_per_seed_se
-plot((postpollen_aborted_per_seed_mean+.1)~species,SummarySpp,cex.axis=.5,pch=16,ylab="aborted post-pollination tissues",log="y")
+plot((postpollen_aborted_per_seed+.1)~species,SummarySpp[["mean"]],cex.axis=.5,pch=16,ylab="aborted post-pollination tissues",log="y")
 se_function(mean1,se1)
             
 mtext("proportion of reproductive investment                                                                       mg investment per seed",3,outer=TRUE,cex=1.1)
