--- a/results_growth.Rmd
+++ b/results_growth.Rmd
@@ -24,7 +24,7 @@
 ```{r, echo=FALSE, message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.6,0.2))
 plot((total_weight~prop_maxH), SummaryInd, col=col.spp(species),pch=16,log="y")
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 ```
 
 ```{r, echo=FALSE, message=FALSE, fig.width=21, fig.height=28}
@@ -89,7 +89,7 @@ for(spp in names(data)) {
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.8,0.3,.5,0.2), mai=c(.7,1,.1,0.2))
 plot((growth_inv~prop_maxH), SummaryInd, log="y", col=col.spp(species),pch=16,xlab="")
-legend("topleft",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 plot(growth_inv~prop_maxH, SummaryInd, log="y", col=col.age(age),pch=16,ylab="",xlab="")
 legend("topleft",legend=labels.age(),col=col.age,pch=16, cex=.8,bty="n")
@@ -134,7 +134,7 @@ results
 ```{r, echo=FALSE, message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
 plot(RGR~prop_maxH,SummaryInd,col=col.spp(species),pch=16)
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 ```
 
 ```{r, echo=FALSE, message=FALSE, fig.width=21, fig.height=35}
@@ -176,7 +176,7 @@ TO DO: species should be a random effect for these stats- I want to know the eff
 ```{r, echo=FALSE,message=FALSE, fig.width=14, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
 plot(growth_shoot_area~growth_stem_area,data=subset(SummaryInd), log="xy",col=col.spp(species), pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
-legend("bottomright",col=col.spp, legend=labels.spp(), pch=16, cex=1,bty="n")
+legend("bottomright",col=col.spp(), legend=labels.spp(), pch=16, cex=1,bty="n")
 
 mod <- lm(growth_shoot_area~species*age*growth_stem_area,SummaryInd)
 anova(mod)
@@ -192,7 +192,7 @@ anova(mod)
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
 plot(shoot_leaf_count~age,data=subset(SummaryInd,age>2),log="xy", xlab="age",ylab="final leaf count along shoot",col=col.spp(species))
-legend("bottomright",col=col.spp, legend=labels.spp(), pch=16, cex=1,bty="n")
+legend("bottomright",col=col.spp(), legend=labels.spp(), pch=16, cex=1,bty="n")
 
 yvar <- "shoot_leaf_count"
 xvar <- "age"
@@ -216,7 +216,7 @@ results
 ```{r, echo=FALSE,message=FALSE,, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
 plot(leaf_weight~total_weight,SummaryInd, log="xy",col=col.spp(species), pch=16, cex=0.8)
-legend("bottomright",col=col.spp, legend=labels.spp(), pch=16, cex=.8, bty="n")
+legend("bottomright",col=col.spp(), legend=labels.spp(), pch=16, cex=.8, bty="n")
 ```
 
 ###Shifts in shoot extension with age
@@ -231,7 +231,7 @@ legend("bottomright",col=col.spp, legend=labels.spp(), pch=16, cex=.8, bty="n")
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
 mod <- lm(prop_maxH~growth_shoot_length,data=subset(SummaryInd,age>2))
 plot(growth_shoot_length~prop_maxH,data=subset(SummaryInd,age>2),log="y", ylab="shoot extension (mm)",col=col.spp(species),pch=16)
-legend(12,200,col=col.spp, legend=labels.spp(), pch=16, cex=.8,bty="n")
+legend(12,200,col=col.spp(), legend=labels.spp(), pch=16, cex=.8,bty="n")
 words.bottom.right.logy(mod)
 
 mod <- lm(age~species*growth_shoot_length,data=subset(SummaryInd,age>2))
@@ -380,7 +380,7 @@ text(1000,1800,srt=39,labels="1:1 line")
 plot((RGR_leaf)~(RGR_stem), SummaryInd,col=col.spp(species), pch=16,ylim=c(-1,4),xlab="")
 abline(0,0)
 abline(0,1)
-legend("topleft",col=col.spp, legend=labels.spp(), pch=16, cex=.9, bty="n")
+legend("topleft",col=col.spp(), legend=labels.spp(), pch=16, cex=.9, bty="n")
 
 plot((leaf_area)~(stem_weight), SummaryInd,col=col.spp(species), pch=16,log="xy",xlab="")
 abline(0,1)
@@ -398,9 +398,9 @@ words.bottom.right.logxy(mod)
 - The same basic relationship exists across all ages, so combined all data here  
 ```{r, echo=FALSE,message=FALSE, fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,1,0.6)) 
-plot(growth_inv_mean ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age(age),pch=16,cex=1,xlab="seed size (mg)",ylab="growth investment (mg per year)",main="Effect of seed size on growth rates")
+plot(growth_inv ~ seed_size,data=subset(SummarySppAge,age>.5),log="xy",col=col.age(age),pch=16,cex=1,xlab="seed size (mg)",ylab="growth investment (mg per year)",main="Effect of seed size on growth rates")
 legend("topleft",col=col.age, labels.age(), pch=16, cex=1,bty="n")
-text(growth_inv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
+text(growth_inv ~ seed_size, data=subset(SummarySppAge,age==9), labels=species, pos=2, offset=-2.4, cex=0.9,col="blue")
 ```
 
 ### Species with greater maximum height have higher growth rates
@@ -408,20 +408,20 @@ text(growth_inv_mean ~ seed_size, data=subset(SummarySppAge,age==9), labels=spec
 - There is a positive correlation with the maximum height the species reaches at a given age -i.e. fast growing young plants are tall when young.  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv ~ maxH,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv ~ maxH, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ maxH, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv ~ maxH,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv ~ maxH, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ maxH, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
 
-plot(growth_inv_mean ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(growth_inv_mean ~ maxH, data=subset(SummarySppAge,age>3))
+plot(growth_inv ~ maxH,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv ~ maxH, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv ~ maxH, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 legend("topleft",col=col.age,labels.age(),pch=16, bty="n")
 
@@ -434,20 +434,20 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - However there is no relationship in younger plants  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv ~ WD,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv ~ WD, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ WD, data=subset(SummarySppAge,age==1.4))
 words.bottom.left.logxy(mod)
 
-plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv ~ WD,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv ~ WD, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ WD, data=subset(SummarySppAge,age==2.4))
 words.bottom.left.logxy(mod)
 legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 
-plot(growth_inv_mean ~ WD_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(growth_inv_mean ~ WD_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv ~ WD,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv ~ WD, data=subset(SummarySppAge,age==5), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv ~ WD, data=subset(SummarySppAge,age>3))
 words.bottom.left.logxy(mod)
 
 mtext("wood density",1,outer=TRUE)
@@ -457,14 +457,14 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 * same wood density data plotted against RGR instead - also no pattern with young
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(RGR_mean ~ WD_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==1.4))
+plot(RGR ~ WD,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(RGR ~ WD, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(RGR ~ WD, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(RGR_mean ~ WD_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(RGR_mean ~ WD_mean, data=subset(SummarySppAge,age==2.4))
+plot(RGR ~ WD,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(RGR ~ WD, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(RGR ~ WD, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 
@@ -475,20 +475,20 @@ mtext("RGR",2,outer=TRUE)
 ### Leaf area vs growth investment
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings",ylim=c(100,50000))
-text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv ~ leaf_area,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings",ylim=c(100,50000))
+text(growth_inv ~ leaf_area, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ leaf_area, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings",ylim=c(100,100000))
-text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv ~ leaf_area,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings",ylim=c(100,100000))
+text(growth_inv ~ leaf_area, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ leaf_area, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
 
-plot(growth_inv_mean ~ leaf_area_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults",ylim=c(100,1000000))
-text(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age==7), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(growth_inv_mean ~ leaf_area_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv ~ leaf_area,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults",ylim=c(100,1000000))
+text(growth_inv ~ leaf_area, data=subset(SummarySppAge,age==7), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv ~ leaf_area, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 legend("topleft",col=col.age,labels.age(),pch=16, bty="n")
 
@@ -503,25 +503,25 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - But relationship in adults disappears when HATE is removed...
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2)) 
-plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==1.4))
+plot(growth_inv ~ LMA,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv ~ LMA, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ LMA, data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv ~ LMA,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv ~ LMA, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ LMA, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 
-plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv ~ LMA,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv ~ LMA, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv ~ LMA, data=subset(SummarySppAge,age>3))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ LMA_mean,data=subset(SummarySppAge,age>3&species!="HATE"),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(growth_inv_mean ~ LMA_mean, data=subset(SummarySppAge,age>3&species!="HATE"))
+plot(growth_inv ~ LMA,data=subset(SummarySppAge,age>3&species!="HATE"),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv ~ LMA, data=subset(SummarySppAge,age>3&species!="HATE"), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv ~ LMA, data=subset(SummarySppAge,age>3&species!="HATE"))
 words.bottom.right.logxy(mod)
 
 mtext("LMA",1,outer=TRUE)
@@ -533,19 +533,19 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 - And just barely a significant relationship between RGR and leaflifespan for adult plants
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(.5,1,.6,0.2))
-plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
-text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(log(LL_death_mean)~log(growth_inv_mean), data=subset(SummarySppAge,age==1.4))
+plot(growth_inv ~ LL_death,data=subset(SummarySppAge,age==1.4),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Seedlings")
+text(growth_inv ~ LL_death, data=subset(SummarySppAge,age==1.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(log(LL_death)~log(growth_inv), data=subset(SummarySppAge,age==1.4))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
-text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
-mod <- lm(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age==2.4))
+plot(growth_inv ~ LL_death,data=subset(SummarySppAge,age==2.4),log="xy",col="gold1",pch=16,cex=1,xlab="",ylab="",main="Saplings")
+text(growth_inv ~ LL_death, data=subset(SummarySppAge,age==2.4), labels=species, pos=1, offset=-1.1, cex=0.7,col="blue")
+mod <- lm(growth_inv ~ LL_death, data=subset(SummarySppAge,age==2.4))
 words.bottom.right.logxy(mod)
 
-plot(growth_inv_mean ~ LL_death_mean,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
-text(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
-mod <- lm(growth_inv_mean ~ LL_death_mean, data=subset(SummarySppAge,age>3))
+plot(growth_inv ~ LL_death,data=subset(SummarySppAge,age>3),log="xy",col=col.age(age),pch=16,cex=1,xlab="",ylab="",main="Adults")
+text(growth_inv ~ LL_death, data=subset(SummarySppAge,age>3), labels=species, pos=1, offset=-1.1, cex=0.6,col="blue")
+mod <- lm(growth_inv ~ LL_death, data=subset(SummarySppAge,age>3))
 legend("topright",col=col.age,labels.age(),pch=16, bty="n")
 words.bottom.right.logxy(mod)
 
@@ -555,7 +555,7 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 
 ###PCA analysis
 * This combination of variables shows that RGR is approximately opposite a collection of variables that indicate a plant is "bigger" - so smaller plants have higher RGR
-* Orthoganal to these in WD vs. maxH, LMA_mean, seed_size, and shoot_growth - species that are taller as adults have bigger seeds, higher LMA, and greater shoot growth (both stem growth & leaf count), independent of their current (age dependent) size
+* Orthoganal to these in WD vs. maxH, LMA, seed_size, and shoot_growth - species that are taller as adults have bigger seeds, higher LMA, and greater shoot growth (both stem growth & leaf count), independent of their current (age dependent) size
 * this analysis doesn't include accessory proportions, because then I have to use subset of reproducing individuals - see below - greatly reducing sample size
 * fine tuning:  
   ** remove RGR leaf (similar to RGR)
@@ -565,7 +565,7 @@ mtext("yearly growth (mg)",2,outer=TRUE)
 par(mfrow=c(1,1), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 SummaryIndPCA <- SummaryInd %>%
   filter(shoot_leaf_count>0&shoot_leaf_area>0&shoot_growth_leaf_area!=0) %>%
-  select(prop_maxH,height,maxH,WD_mean,LMA_mean,seed_size,growth_leaf,
+  select(prop_maxH,height,maxH,WD,LMA,seed_size,growth_leaf,
          RGR,leaf_area,growth_shoot_area,growth_stem_area,shoot_leaf_count,total_weight,
          RA,seedset,repro_all_count,accessory_inv,propagule_inv,shoot_leaf_area,shoot_growth_leaf_area)
 
@@ -653,9 +653,9 @@ PCA_by_species <- SummaryInd_PCA_results %>%
 plot(PC1_scale~(PC2_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species),xlim=c(-.1,.1))
 arrows(0, 0, (.9*PCA_loadings$PC2_scale), (.9*PCA_loadings$PC1_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC1_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mean1 <- PCA_by_species$PC1_scale_mean
+mean1 <- PCA_by_species$PC1_scale
 se1 <- PCA_by_species$PC1_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 1")
 se_function(mean1,se1)
@@ -664,7 +664,7 @@ plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-mean1 <- PCA_by_species$PC2_scale_mean
+mean1 <- PCA_by_species$PC2_scale
 se1 <- PCA_by_species$PC2_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 2")
 se_function(mean1,se1)
@@ -673,7 +673,7 @@ plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC3_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
 
-mean1 <- PCA_by_species$PC3_scale_mean
+mean1 <- PCA_by_species$PC3_scale
 se1 <- PCA_by_species$PC3_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 3")
 se_function(mean1,se1)
@@ -681,9 +681,9 @@ se_function(mean1,se1)
 plot(PC4_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species),ylim=c(-.15,.15))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC4_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC4_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
-mean1 <- PCA_by_species$PC4_scale_mean
+mean1 <- PCA_by_species$PC4_scale
 se1 <- PCA_by_species$PC4_scale_se
 plot(mean1~species,PCA_by_species,cex.axis=.5,pch=16,ylab="PCA axis 4",,ylim=c(-.07,.04))
 se_function(mean1,se1)
@@ -700,7 +700,7 @@ par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.age(age)
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
@@ -721,13 +721,13 @@ text(PC3_scale ~ PC2_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex
 * PC1 is still WD vs lots of growth variables, but now absolute measures of reproductive investment (propagule_inv and accessory_inv) associate with absolute "big size" not high RA
 * PC2 is RA, seedset, and prop_propagule vs. RGR, shoot growth variables and prop_accessory; not surprising that prop_propagule and prop_accessory pulled to opposite ends
 * PC3 is somewhat similar. It is also prop_accessory and prop_maxH vs seed set and prop_propagule, but it now separates out all the shoot growth values
-* PC4 is now the axis that separates LMA_mean and maxH vs. WD_mean, with variables like maxH pulling toward all the "big size" arrows
+* PC4 is now the axis that separates LMA and maxH vs. WD, with variables like maxH pulling toward all the "big size" arrows
 
 ```{r, echo=FALSE,message=FALSE,fig.width=7, fig.height=7}
 par(mfrow=c(1,1), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 SummaryIndPCA <- SummaryInd %>%
   filter(shoot_leaf_count>0&accessory_inv>0&shoot_growth_leaf_area!=0) %>%
-  select(prop_maxH,height,maxH,WD_mean,LMA_mean,seed_size,growth_leaf,
+  select(prop_maxH,height,maxH,WD,LMA,seed_size,growth_leaf,
          RGR,leaf_area,growth_shoot_area,growth_stem_area,shoot_leaf_count,total_weight,
          RA,seedset,repro_all_count,accessory_inv,propagule_inv,shoot_leaf_area,shoot_growth_leaf_area,
          prop_propagule, prop_accessory)
@@ -787,7 +787,7 @@ par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
 plot(PC2_scale~(PC1_scale),SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC2_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
 text(PC2_scale ~ PC1_scale, PCA_loadings, labels=variables, pos=1, offset=0, cex=1,col="black")
-legend("topright",legend=labels.spp(),col=col.spp,pch=16, cex=.8,bty="n")
+legend("topright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 
 plot(PC3_scale~PC1_scale,SummaryInd_PCA_results,pch=16,col=col.spp(species))
 arrows(0, 0, (.9*PCA_loadings$PC1_scale), (.9*PCA_loadings$PC3_scale), length = 0.25, angle = 30, code = 2, col = "red",lwd=2)
@@ -809,17 +809,17 @@ anova(mod)
 glance(mod)[1]
 
 
-mod <- lm(RGR~asin(sqrt(RA))+prop_maxH+log(propagule_inv+1)+log(accessory_inv+1)+log(total_weight)+log(repro_all_count+1)+WD_mean+LMA_mean+maxH,SummaryInd)
+mod <- lm(RGR~asin(sqrt(RA))+prop_maxH+log(propagule_inv+1)+log(accessory_inv+1)+log(total_weight)+log(repro_all_count+1)+WD+LMA+maxH,SummaryInd)
 anova(mod)
 glance(mod)[1]
 ```
 
-* another of the interesting pattern is that the increase in shoot area of leaders is correlated with maxH and seed_size (and opposite WD_mean) and somewhat offset from whole plant growth measures and whole plant size measures  
+* another of the interesting pattern is that the increase in shoot area of leaders is correlated with maxH and seed_size (and opposite WD) and somewhat offset from whole plant growth measures and whole plant size measures  
 * seed_size removed, because no additional explanatory power after WD and maxH included
 
 
 ```{r, echo=FALSE,message=FALSE}
-mod <- lm(log(growth_shoot_area)~log(maxH)+WD_mean+log(growth_stem_area)+log(total_weight)+RGR+asin(sqrt(RA))+LMA_mean,SummaryInd)
+mod <- lm(log(growth_shoot_area)~log(maxH)+WD+log(growth_stem_area)+log(total_weight)+RGR+asin(sqrt(RA))+LMA,SummaryInd)
 anova(mod)
 glance(mod)
 ```
@@ -831,18 +831,18 @@ plot(mod)
 -
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
-plot(WD_mean~maxH,SummarySpp, log="x",col=col.spp(species),pch=16)
-mod <- lm(log(maxH)~WD_mean,SummaryInd)
+plot(WD~maxH,SummarySpp[["mean"]], log="x",col=col.spp(species),pch=16)
+mod <- lm(log(maxH)~WD,SummaryInd)
 words.bottom.left.logx(mod)
 
-plot(WD_mean~maxH,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"), log="x",col=col.spp(species),pch=16)
-mod <- lm(log(maxH)~WD_mean,data=subset(SummarySpp,species!="PUTU"&species!="PHPH"))
+plot(WD~maxH,data=subset(SummarySpp[["mean"]],species!="PUTU"&species!="PHPH"), log="x",col=col.spp(species),pch=16)
+mod <- lm(log(maxH)~WD,data=subset(SummarySpp[["mean"]],species!="PUTU"&species!="PHPH"))
 words.bottom.left.logx(mod)
 
-plot(seedset_mean~total_weight_mean,SummarySpp, log="x",col=col.spp(species),pch=16)
-mod <- lm(log(total_weight_mean) ~ (seedset_mean),SummarySpp)
+plot(seedset~total_weight,SummarySpp[["mean"]], log="x",col=col.spp(species),pch=16)
+mod <- lm(log(total_weight) ~ (seedset),SummarySpp[["mean"]])
 words.bottom.left.logx(mod)
 
-plot(seedset_mean~maxH,SummarySpp, log="x",col=col.spp(species),pch=16)
-mod <- lm(log(maxH) ~ (seedset_mean),SummarySpp)
+plot(seedset~maxH,SummarySpp[["mean"]], log="x",col=col.spp(species),pch=16)
+mod <- lm(log(maxH) ~ (seedset),SummarySpp[["mean"]])
 words.bottom.left.logx(mod)
